# token-wire

./: .gitignore  README.md  setup.py
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/services/: metrics.py  model_manager.py
colab/: README.md  tokenwire_benchmark.ipynb
colab/datasets/: prompts.json
colab/dictionaries/: .gitkeep
frontend/: package-lock.json
frontend/src/components/: ChatInterface.tsx  ResearchPortal.tsx
frontend/src/workers/: inflator.worker.ts
scripts/: extract_vocab.py
