[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "llama-cpp-python",
    "pydantic",
    "pydantic-settings",
    "uvicorn",
    "psutil",
    "websockets>=16.0",
]

[project.optional-dependencies]
research = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "aiohttp>=3.9.0",
]

[tool.uv]
extra-index-url = ["https://abetlen.github.io/llama-cpp-python/whl/cpu"]
